@@ -211,6 +211,20 @@
                 <label>[CAPITALIZE]$LOCALIZE[10050][/CAPITALIZE]</label>
                 <icon>special://skin/extras/icons/recent.png</icon>
                 <onclick>ActivateWindow(eventlog)</onclick>
+                <visible>!System.HasAddon(service.libreelec.settings)</visible>
+                <visible>!System.HasAddon(service.coreelec.settings)</visible>
+            </item>
+            <item id="5">
+                <label>[CAPITALIZE]LibreELEC $LOCALIZE[5][/CAPITALIZE]</label>
+                <icon>special://skin/extras/icons/libreelec.png</icon>
+                <onclick>RunScript(service.libreelec.settings)</onclick>
+                <visible>System.HasAddon(service.libreelec.settings)</visible>
+            </item>
+            <item id="6">
+                <label>[CAPITALIZE]CoreELEC $LOCALIZE[5][/CAPITALIZE]</label>
+                <icon>special://skin/extras/icons/coreelec.png</icon>
+                <onclick>RunScript(service.coreelec.settings)</onclick>
+                <visible>System.HasAddon(service.coreelec.settings)</visible>
             </item>
         </content>
     </include>
