@@ -1,6 +1,7 @@
 0.9.49
 - Fix OSD covering subtitles when adjusting offset
 - Fix default showcase starrating (not imdb)
+- Add LibreELEC and CoreELEC setting options
 
 0.9.48
 - Options for info in pvr guide
